# mesh-point-cloud-distance

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  mesh_pcl.cc
lib/: CMakeLists.txt  benchmark.cc  benchmark.h  file_io.cc  file_io.h  mesh.h  meshdist.cc  meshdist.h  random_utils.h  string_utils.cc  string_utils.h
scripts/: build_all.sh
